# ollama-chat

./: .gitignore  README.md  env.default  pyproject.toml
ollama_chat/: models.py  settings.py  ui.py
ollama_chat/chat/: chat_base.py  ollama_chat.py
tests/: test_settings.py  test_ui.py
